[workspace]
resolver = "2"
members = [
  "time_lock",
  "example",
  "tests",
  "tests/common",
] 

[workspace.package]
version = "0.1.0"

[workspace.dependencies]
soroban-sdk = "20.3.2"
time-lock-example-contract = { path = "example" }
time-lock = { path = "time_lock" }
time-lock-tests-common = { path = "tests/common" }

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

# For more information about this profile see https://soroban.stellar.org/docs/basic-tutorials/logging#cargotoml-profile
[profile.release-with-logs]
inherits = "release"
debug-assertions = true
